Fix DRO layout overflow

--- a/styles/base.css
+++ b/styles/base.css
@@ -539,6 +539,12 @@ trough {
     font-size: 1.15em;
 }
 
+.cnc-dro-limits {
+    font-family: monospace;
+    font-size: 0.85em;
+    opacity: 0.65;
+}
+
 .printing-status-label {
     padding-top: .25em;
     padding-bottom: .15em;
